--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.UserLoginActivity"></activity>
+        <activity android:name=".activity.SellerLoginActivity"></activity>
+        <activity android:name=".activity.AdministratorLoginActivity"></activity>
     </application>
 
 </manifest>
